# aSC

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose-dev.yml  docker-compose.yml  dockerfile  init.sql  nginx.conf
.sqlx/: query-275315977acad87efd4b0cfbdab72540857e73593a9ab535775fdccf71f0723f.json  query-5d64e4dc88d3156b10fe3765d4d8ce771f4daf4b6ffd5d4635df45b9aa8eb8bd.json  query-784d2216b5a29af899d5af5f1c8144c16badd23ea45760c72be4c46c92cc214a.json  query-f5264380d1030471f367628a616c64ff21f0f7c4e67c82acd760d705541fb3a1.json
db/: sql_entry.sql
migrations/: 20240318211251_init.sql
src/: cache.rs  config.rs  controllers.rs  database.rs  error_handler.rs  main.rs
stress-test/: run-test.sh
stress-test/user-files/resources/: termos-busca.tsv
