[package]
name = "a_sc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
config = "0.14.0"
deadpool-redis = { version = "0.14", features = ["serde"] }
deadpool = "0.10.0"
deadqueue = "0.2.4"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "time", "uuid", "macros"] }
time = { version = "0.3.34", features = ["formatting", "macros", "serde", "parsing"] }
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v7", "serde"] }
watch = "0.2.3"


